--- a/templates/theme-header.html
+++ b/templates/theme-header.html
@@ -7,8 +7,8 @@
 <%block name="navigation_top">
   <div id="su-header">
     <div class="su-container">
-      <a href="http://www.stanford.edu">
-        <img src="https://www.stanford.edu/su-identity/images/brandbar-stanford-logo@2x.png" alt="Stanford University" width="152" height="23">
+      <a href="http://www.croatopica.net">
+        <img src="https://www.croatopica.net/su-identity/images/brandbar-stanford-logo@2x.png" alt="Croatopica" width="152" height="23">
       </a>
     </div>
   </div>
