--- a/templates/theme-header.html
+++ b/templates/theme-header.html
@@ -8,7 +8,7 @@
   <div id="su-header">
     <div class="su-container">
       <a href="http://www.croatopica.net">
-        <img src="https://www.croatopica.net/su-identity/images/brandbar-stanford-logo@2x.png" alt="Croatopica" width="152" height="23">
+        <img src="${static.url('themes/stanford/images/brandbar-logo.png')}" alt="Croatopica" width="152" height="23">
       </a>
     </div>
   </div>
