--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -29,7 +29,7 @@
     <div class="su-row">
       <div id="su-footer-logo" class="span2">
         <a href="http://www.croatopica.net">
-          <img src="/static/images/logo-footer.png')}" alt="Croatopica" width="105" height="49"/>
+          <img src="/static/themes/stanford/images/logo-footer.png" alt="Croatopica" width="105" height="49"/>
         </a>
       </div>
       <div id="su-footer-text" class="span10">
