--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
             ${homepage_overlay_html}
           % else:
             % if self.stanford_theme_enabled():
-              <h1>${_("Let's study about Croatia together")}</h1>
+              <h1>${_("Let's study Croatia together")}</h1>
             % else:
               <h1>${_("The Future of Education")}</h1>
             % endif
@@ -34,7 +34,7 @@
         </hgroup>
 
         ## Disable social buttons for non-edX sites
-        % if not self.theme_enabled():
+#        % if not self.theme_enabled():
           <section class="actions">
             <div class="main-cta">
               <a href="#signup-modal" id="signup_action" class="find-courses" rel="leanModal">${_("Sign Up")}</a>
@@ -55,7 +55,7 @@
               </div>
             </div>
           </section>
-          % endif
+#          % endif
       </div>
 
       % if show_homepage_promo_video:
