--- a/static/css/su-identity.css
+++ b/static/css/su-identity.css
@@ -39,13 +39,13 @@ Custom base styles
 }
 /* Background gradient */
 #brandbar {
-  background:#8c1515;
+  background:#2F5C98;
   box-shadow:inset 0 -4px 8px -2px rgba(0, 0, 0, 0.2); /* Horizontal offset , vertical offset, blur, internal spacing */
   min-height:30px;
 }
 #global-footer,
 #global-footer .container {
-  background:#8c1515;
+  background:#2F5C98;
   color:#e3dfd5;
   box-shadow:inset 0 4px 8px -2px rgba(0, 0, 0, 0.2); /* Horizontal offset , vertical offset, blur, internal spacing */
 }
